--- a/ExMaven/pom.xml
+++ b/ExMaven/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>ExMaven</artifactId>
   <groupId>devops.course</groupId>
-  <version>0.0.1</version>
+  <version>0.0.1-SNAPSHOT</version>
 
   <dependencies>
   <!-- https://mvnrepository.com/artifact/junit/junit -->
